# eye-shield

./: .gitignore  README.md  eyeshield.py  setup.py
dependencies/: environment_wsl.yml  requirements.txt
eval/: brightness_eval.py  cloud_results_for_contrast.py  compute_scores.py  google_cloud.py  new_process_cloud_results.py  parse_performance.py  plot_recognition_rates.py  process_cloud_results.py  write_labels.py
random/: color_calibration.py  parse_colors.py  reformat_performance.py  resize.py  select_images.py  select_images_brightness.py  select_images_contrast.py  spv.txt  test_video.py  tmp_kp_shader.comp.spv  video.py
scripts/: run_computescores.sh  run_google_cloud.sh  run_hideimage.sh  run_hideimage_gpu.sh  run_hidevideo.sh  run_plots.sh
shaders/android/: CMakeLists.txt  GenerateSPV.cpp  KomputeShaders.cpp  KomputeShaders.hpp  LoadImage.cpp  RunEyeshield.cpp  parse_spv.py  spv.txt  tmp_kp_shader.comp.spv
src/: algorithm.py  algorithm_cuda.py  hideimage.py  hidevideo.py  utils.py
user_study/: process_inperson_survey.py  process_survey.py
